exports[`<Menu /> renders children correctly 1`] = `
<ul
  className="sc-dnqmqq sGEvq">
  <li
    className="sc-htoDjs hHyFTq" />
  <span
    collapse={undefined}>
    Child
  </span>
</ul>
`;

exports[`<Menu /> renders correctly with collapse option 1`] = `
<ul
  className="sc-dnqmqq sGEvq">
  <li
    className="sc-htoDjs kDSOKE" />
</ul>
`;

exports[`<Menu /> renders correctly with default options 1`] = `
<ul
  className="sc-dnqmqq sGEvq">
  <li
    className="sc-htoDjs hHyFTq" />
</ul>
`;

exports[`<Menu /> renders correctly with header 1`] = `
<ul
  className="sc-dnqmqq sGEvq">
  <li
    className="sc-htoDjs hHyFTq">
    A Header
  </li>
</ul>
`;

exports[`<Menu /> renders correctly with theme 1`] = `
<ul
  className="sc-dnqmqq sGEvq">
  <li
    className="sc-htoDjs kbGUIQ" />
</ul>
`;
